WikiaMobile: Blurry text in navigation (BugId: 37996)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@57684 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaMobile/css/navigation.scss
+++ b/extensions/wikia/WikiaMobile/css/navigation.scss
@@ -164,7 +164,6 @@
 			-webkit-transform: translateZ(0);
 			-moz-transform: translateZ(0);
 			transform: translateZ(0);
-			-webkit-perspective: 1000;
 			-webkit-backface-visibility: hidden;
 
 			li {
@@ -215,7 +214,7 @@
 
 		&.cur3 {
 			#lvl1 {
-				-webkit-transform: translate(-200%);
+				-webkit-transform: translate(-200%) ;
 			}
 		}
 
